update the api route

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <p>OUTPUT</p>
   <textarea rows='10' id='resultcode'></textarea>
   <script>
-    const server = '/svgjson';
+    const server = '/Modules/svgjson';
     document.getElementById('form').addEventListener('submit', async event => {
         event.preventDefault();
         await convertCode()
