Ajsting html route

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <p>OUTPUT</p>
   <textarea rows='10' id='resultcode'></textarea>
   <script>
-    const server = '/modules/svgjson';
+    const server = '/svgjson';
     console.log(server);
     document.getElementById('form').addEventListener('submit', async event => {
         event.preventDefault();
