--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <select id="outputFormat">
       <option value="json">JSON</option>
       <option value="svg">SVG</option>
+      <option value="fontsvg">Font SVG</option>
     </select>
     <p>filename</p>
     <input id="filename" placeholder="filename">
